--- a/darwin.org
+++ b/darwin.org
@@ -2,8 +2,8 @@
 #+DESCRIPTION: A basic introductional guide on building a Nix-Darwin config on your personal Mac machine
 #+AUTHOR: Matthias Benaets
 
-#+ATTR_ORG: :width 200
-[[file:rsc/Nix-Darwin.png]]
+#+ATTR_ORG: :width 300
+[[file:rsc/Nix-Darwin.svg]]
 
 * Nix-Darwin
 ** Introduction
