theming, rofi, polybar, configs, var

--- a/README.org
+++ b/README.org
@@ -128,10 +128,10 @@ This will depend on the host chosen.
 #+END_SRC
 
 *** Possible Extra Steps
-1. If you are planning to use doom emacs. It's recommended to comment out the import in configuration.nix for the initial installation if no user environment is already available.
-   - This is due to the post install script is partially hardcoded
-   - If you move your flake after first install, it's no longer relevant
-   - The installation script is hardcoded for ~$HOME/.setup~, so save the flake there!
+1. If you are planning on using doom emacs, don't forget to rebuild after the initial installation
+   - Don't forget to change the flake location in flake.nix
+   - This is because userActivationScript is used for the setup and some locations are partially hardcoded
+   - It will automatically install if ~~/.emacs.d~ does not exist
 2. Switch specific host hardware-configuration.nix with generated ~/mnt/etc/nixos/hardware-configuration.nixos~
 3. Change existing network card name with the one in your system
    - Look in generated hardware-configuration.nixos
